--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>cms</title>
+    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
+    <script src="//at.alicdn.com/t/font_403264_15ylufmybonu3di.js"></script>
   </head>
   <body>
     <div id="app"></div>
